1、增加登陆接口测试用例 2、增加主程序入口

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -4,3 +4,6 @@ file_name=mall_test.log
 level=DEBUG
 sh_level=DEBUG
 fh_level=DEBUG
+[env]
+base_url=http://192.168.30.171:1996
+headers={'Accept': 'application/json','Content-Type': 'application/json;charset=UTF-8'}
